Add: meta tags and keywords

--- a/digweb/digweb/templates/openVeiw/alzheimer.html
+++ b/digweb/digweb/templates/openVeiw/alzheimer.html
@@ -24,8 +24,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis,
+  Alzheimer predictor, Alzheimer's disease prediction, AI health prediction, dementia prediction, cognitive decline risk, 
+  early Alzheimer's detection, Alzheimer diagnosis tool, machine learning in healthcare, AI-based dementia prediction, Alzheimer's risk assessment" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based Alzheimer prediction tool that analyzes symptoms and risk factors to predict Alzheimer's disease using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
