--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -21,8 +21,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis, 
+  CKD predictor, Chronic Kidney Disease prediction, AI health prediction, kidney disease risk assessment, 
+  CKD diagnosis tool, early kidney disease detection, AI-based CKD predictor, machine learning in healthcare, 
+  kidney health analysis, CKD risk factors" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based Chronic Kidney Disease (CKD) prediction tool that analyzes health data to assess the risk of kidney disease using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
