--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -21,8 +21,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis, 
+  diabetes predictor, diabetes risk assessment, AI health prediction, machine learning diabetes prediction, 
+  diabetes diagnosis tool, early diabetes detection, AI-based diabetes prediction, diabetes risk factors, 
+  predictive healthcare, diabetes prevention" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based diabetes prediction tool that assesses risk factors to predict the likelihood of developing diabetes using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
