--- a/digweb/digweb/templates/openVeiw/hiv.html
+++ b/digweb/digweb/templates/openVeiw/hiv.html
@@ -21,8 +21,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis, 
+  HIV predictor, HIV risk assessment, AI health prediction, machine learning HIV prediction, early HIV detection, 
+  HIV diagnosis tool, HIV infection risk factors, AI-based HIV predictor, HIV risk analysis, predictive healthcare for HIV" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based HIV prediction tool that analyzes health data to assess the risk of HIV infection using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
