--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -21,8 +21,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis, 
+  stroke predictor, stroke risk assessment, AI stroke prediction, machine learning healthcare, early stroke detection, 
+  stroke diagnosis tool, stroke risk factors, AI-based stroke predictor, predictive healthcare for stroke, cerebrovascular disease predictio" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based stroke prediction tool that analyzes risk factors to predict the likelihood of stroke using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
