--- a/digweb/digweb/templates/persianPage/alzheimerpr.html
+++ b/digweb/digweb/templates/persianPage/alzheimerpr.html
@@ -12,8 +12,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش‌بینی بیماری در خانه با هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش‌ بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش‌ بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی،
+  پیش‌ بینی آلزایمر، پیش‌ بینی بیماری آلزایمر، پیش‌ بینی سلامت با هوش مصنوعی، پیش‌ بینی زوال عقل، خطر کاهش شناختی، 
+  تشخیص زودهنگام آلزایمر، ابزار تشخیص آلزایمر، یادگیری ماشین در مراقبت‌های بهداشتی، پیش‌ بینی زوال عقل با هوش مصنوعی، ارزیابی خطر آلزایمر" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: ابزار پیش ‌بینی آلزایمر مبتنی بر هوش مصنوعی که علائم و عوامل خطر را برای پیش‌ بینی بیماری آلزایمر با استفاده از یادگیری ماشین تحلیل می‌کند." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
