--- a/digweb/digweb/templates/persianPage/ckdpr.html
+++ b/digweb/digweb/templates/persianPage/ckdpr.html
@@ -12,8 +12,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش‌ بینی بیماری با خانه هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش‌بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش‌ بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی، 
+  پیش‌ بینی CKD، پیش‌ بینی بیماری کلیوی مزمن، پیش‌ بینی سلامت با هوش مصنوعی، ارزیابی خطر بیماری کلیوی، 
+  ابزار تشخیص CKD، تشخیص زودهنگام بیماری کلیوی، پیش‌ بینی CKD مبتنی بر هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، 
+  تحلیل سلامت کلیه، عوامل خطر CKD" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: ابزار پیش‌ بینی بیماری کلیوی مزمن (CKD) مبتنی بر هوش مصنوعی که داده‌های سلامت را تحلیل کرده و خطر بیماری کلیوی را با استفاده از یادگیری ماشین ارزیابی می‌کند." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
