--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -12,8 +12,14 @@ var page_number=1;
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش ‌بینی بیماری با خانه هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش‌ بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش ‌بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی، 
+  پیش‌ بینی CVD، پیش‌ بینی بیماری قلبی عروقی، ارزیابی خطر بیماری قلبی، پیش‌ بینی سلامت با هوش مصنوعی، 
+  یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل سلامت قلب، تشخیص زودهنگام CVD، پیش‌ بینی بیماری قلبی مبتنی بر هوش مصنوعی، 
+  عوامل خطر بیماری قلبی عروقی، ابزار تشخیص بیماری قلبی" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: ابزار پیش‌ بینی بیماری قلبی عروقی (CVD) مبتنی بر هوش مصنوعی که عوامل خطر را برای پیش‌ بینی بیماری قلبی با استفاده از یادگیری ماشین ارزیابی می‌کند." />
+
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
