--- a/digweb/digweb/templates/persianPage/diabetespr.html
+++ b/digweb/digweb/templates/persianPage/diabetespr.html
@@ -12,8 +12,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش‌ بینی بیماری با خانه هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش‌ بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش‌ بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی، 
+  پیش ‌بینی دیابت، ارزیابی خطر دیابت، پیش‌ بینی سلامت با هوش مصنوعی، پیش‌ بینی دیابت با یادگیری ماشین، 
+  ابزار تشخیص دیابت، تشخیص زودهنگام دیابت، پیش‌ بینی دیابت مبتنی بر هوش مصنوعی، عوامل خطر دیابت، 
+  مراقبت‌های بهداشتی پیش‌ بینی‌کننده، پیشگیری از دیابت" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: ابزار پیش‌ بینی دیابت مبتنی بر هوش مصنوعی که عوامل خطر را برای پیش‌ بینی احتمال ابتلا به دیابت با استفاده از یادگیری ماشین تحلیل می‌کند." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
