--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -12,8 +12,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش‌ بینی بیماری با خانه هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش ‌بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش‌ بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی، 
+  پیش‌ بینی سکته مغزی، ارزیابی خطر سکته مغزی، پیش‌ بینی سکته مغزی با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، 
+  تشخیص زودهنگام سکته مغزی، ابزار تشخیص سکته مغزی، عوامل خطر سکته مغزی، پیش‌ بینی سکته مغزی مبتنی بر هوش مصنوعی، 
+  مراقبت‌های بهداشتی پیش‌ بینی‌کننده برای سکته مغزی، پیش‌ بینی بیماری عروقی مغزی" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: ابزار پیش‌ بینی سکته مغزی مبتنی بر هوش مصنوعی که عوامل خطر را برای پیش‌ بینی احتمال سکته مغزی با استفاده از یادگیری ماشین تحلیل می‌کند." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
