--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -21,8 +21,13 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="AI TEC, Disease predictor, Health AI, AI TEC disease predictor, Predict disease, 
+  disease prediction, AI health prediction, machine learning healthcare, symptom analysis, health risk prediction, 
+  medical diagnosis tool, disease forecasting, AI medical tools, predictive healthcare, AI-based diagnosis, 
+  CVD predictor, Cardiovascular Disease prediction, heart disease risk assessment, AI health prediction, 
+  machine learning in healthcare, heart health analysis, early CVD detection, AI-based heart disease prediction, 
+  cardiovascular risk factors, heart disease diagnosis tool" />
+  <meta name="description" content="AI TEC Web application for predicting diseases: AI-based Cardiovascular Disease (CVD) prediction tool that assesses risk factors to predict heart disease using machine learning." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
