--- a/digweb/digweb/templates/persianPage/indexpr.html
+++ b/digweb/digweb/templates/persianPage/indexpr.html
@@ -11,8 +11,10 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="AI TEC Web application for predicting diseases" />
+  <meta name="keywords" content="خانه هوش مصنوعی، پیش‌ بینی بیماری، هوش مصنوعی سلامت، پیش‌ بینی بیماری در خانه با هوش مصنوعی، پیش‌ بینی بیماری، 
+  پیش‌ بینی بیماری با هوش مصنوعی، یادگیری ماشین در مراقبت‌های بهداشتی، تحلیل علائم، پیش‌ بینی خطر سلامت، 
+  ابزار تشخیص پزشکی، پیش‌ بینی بیماری، ابزارهای پزشکی هوش مصنوعی، مراقبت‌های بهداشتی پیش‌ بینی‌کننده، تشخیص مبتنی بر هوش مصنوعی" />
+  <meta name="description" content="برنامه وب خانه هوش مصنوعی برای پیش‌ بینی بیماری‌ها: پلتفرم پیش‌ بینی بیماری مبتنی بر هوش مصنوعی برای تحلیل علائم و پیش‌بینی خطرات سلامتی با استفاده از یادگیری ماشین." />
   <meta name="author" content="Mohammad Zakaria Rajabi" />
   <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
